--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <title>Relu - Coding Round</title>
+
+    <link href="https://fonts.cdnfonts.com/css/gilroy-bold" rel="stylesheet" />
   </head>
   <body>
     <div id="root"></div>
