Implement carousel using embla-carousel-react

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>Relu - Coding Round</title>
 
     <link href="https://fonts.cdnfonts.com/css/gilroy-bold" rel="stylesheet" />
+    <link href="https://fonts.cdnfonts.com/css/barlow" rel="stylesheet" />
   </head>
   <body>
     <div id="root"></div>
